[package]
name = "db_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
mongodb = { version = "2.2.0-beta", features = ["bson-chrono-0_4", "bson-serde_with"] }
serde = "1.0.136"
serde_with = { version = "1.12.0", features = ["chrono"] }
tokio = { version = "1.17.0", features = [] }
tracing = { version = "0.1.31", features = ["log"] }
#tracing-futures = { version = "0.2.5", default-features = false }
tracing-subscriber = { version = "0.3.9", features = ["local-time", "env-filter", "std"] }
tracing-log = "0.1.2"
