[package]
name = "db_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
mongodb = { version = "2.2.0-beta", features = ["bson-chrono-0_4", "bson-serde_with"] }
serde = "1"
serde_with = { version = "1", features = ["chrono"] }
tokio = { version = "1", features = [] }
tracing = { version = "0.1", features = ["log"] }
#tracing-futures = { version = "0.2.5", default-features = false }
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter", "std"] }
tracing-log = "0.1"
