[package]
name = "db_task"
version = "0.1.0"
edition = "2021"
authors = ["qiaoruntao"]
description = "Use mongodb to schedule task running"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0"
chrono = { version = "0", features = ["serde"] }
futures = "0"
mongodb = { version = "2", features = ["bson-chrono-0_4", "bson-serde_with"] }
serde = "1"
serde_with = { version = "2", features = ["chrono"] }
tokio = { version = "1", features = ["signal"] }
tracing = { version = "0", features = ["log"] }
#tracing-futures = { version = "0.2.5", default-features = false }
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter", "std"] }
tracing-log = "0.1"